# VeriNews

./: .env.example  .gitignore  6_WEEK_PLAN.md  91_PERCENT_MILESTONE.md  COMMANDS.md  COMPLETE_ANALYSIS_SUMMARY.md  COMPREHENSIVE_ANALYSIS.md  DOCUMENTATION_INDEX.md  FINAL_ANALYSIS.md  IMPROVEMENTS_GUIDE.md  LICENSE  Makefile  NEXT_LEVEL_ROADMAP.md  PIPELINE_WALKTHROUGH.md  PROJECT_OVERVIEW.md  PROJECT_REPORT.md  PROJECT_SUMMARY.md  PROJECT_TREE.txt  QUICKSTART.md  README.md  RESEARCH_GUIDE.md  SEM7_UPDATE.md  SETUP_COMPLETE.md  START_HERE.txt  STATUS.md  SUCCESS_REPORT.md  VERIFICATION.md  pyproject.toml  setup.sh
configs/: graph_config.yaml  model_config.yaml  preprocessing_config.yaml
data/: .gitkeep
data/graphs_full/: graph_data_clean_metadata.json  graph_data_enriched_metadata.json  metadata.json
notebooks/: 01_data_exploration.md  02_model_training.md  03_explainability.md
scripts/: add_graph_statistics.py  add_graph_stats_clean.py  add_node2vec_embeddings.py  advanced_ensemble.py  analyze_attention.py  analyze_baseline_performance.py  analyze_hpo_results.py  analyze_node_importance.py  analyze_progress.py  analyze_temporal.py  analyze_temporal_spreading.py  build_graphs.py  build_graphs_simple.py  build_temporal_curves.py  compare_results.py  create_final_ensemble.py  create_interactive_dashboard.py  create_visualizations.py  decode_snowflake_timestamps.py  download_dataset.py  enhance_graph.py  enrich_graph.py  enrich_graph_v2.py  ensemble_models.py  ensemble_top3_models.py  error_analysis.py  evaluate_model.py  example_workflow.py  explainability_gnnexplainer.py  feature_engineering.py  feature_engineering_v2.py  find_good_baseline_split.py  generate_final_report.py  generate_node_importance_quick.py  hpo_memory_efficient.py  hpo_with_fixed_split.py  hyperparameter_optimization.py  hyperparameter_optimization_fast.py  hyperparameter_optimization_optuna.py  hyperparameter_tuning.py  (+27 more)
src/: __init__.py  utils.py
src/data/: __init__.py  loader.py  preprocessor.py
src/evaluation/: __init__.py  explainability.py  metrics.py
tests/: __init__.py  test_data.py  test_models.py
(+9 files in other folders)
